# swift-return-swift-type

./: README.md
exe/: CMakeLists.txt  Helper.cpp  Helper.h  Helper.swift  module.modulemap
shlib/: Color.swift
